# otobo-ai-services

./: .docker_compose_env_ai  .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: server.py
bugfix/: README.md  config.py
docker-compose/: otobo-ai.yml  otobo-ai_base.yml  otobo-ai_dev.yml  otobo-ai_otobo-docker.yml  otobo-ai_standalone.yml
local_docker_compose/: compose.yaml
mylibs/auth/: auth.py
mylibs/classes/: AppSettings.py  SefHostedEmbeddingFunction.py  Ticket.py
mylibs/core/: chains.py
mylibs/embedding/: embedding.py
mylibs/rag/: chain.py  graph.py
mylibs/rag_chroma/: chain.py
mylibs/rag_compression/: chain.py  graph.py
mylibs/rag_task/: TaskRetriever.py  chain.py  graph.py
mylibs/utils/: utils.py
notebooks/: api-test-script.ipynb  chromatests.ipynb  client.ipynb  demodata.ipynb  demodata.txt  elastic.ipynb  elastic_search.ipynb  llamatests.ipynb  ollama.ipynb
rag_examples/simple_rag/: chains.py  graph.py  io_models.py
rag_examples/simple_rag/prompts/: prompt.txt
rag_examples/tfc_rag1/: chains.py  graph.py
rag_examples/tfc_rag1/prompts/: prompt.txt
rag_examples/tfd_rag1/: chains.py  graph.py  io_models.py
rag_examples/tfd_rag1/prompts/: rag_prompt.txt
rags_examples/answer_v1/: graph.py  io_models.py
rags_examples/answer_v1/prompts/: eval_prompt.txt
rags_examples/label_rag/: graph.py
rags_examples/simple_rag/: graph.py  io_models.py
rags_examples/tfd_rag1/: chains.py  graph.py
src/: auth.py  cli.py  db.py  embedding.py  llm_embedding_utils.py  requirements.txt  server.py  settings.py  utils.py
src/chains/: simple_rag_chain.py
src/core/: chains.py
src/data_models/: delete.py  ingest.py  retrieve.py  ticket.py
src/graphs/: simple_rag_graph.py
src/init-sql/: schema.sql
src/prompts/: simple_rag_prompt.txt
src/rag/: graph.py
