[tool.poetry]
name = "otobo-tas"
version = "0.1.0"
description = ""
authors = ["Horst Amper <horst.amper@ki-werkstatt.net>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.23.2"
fastapi = "^0.115.6"
loguru = "^0.7.3"
langchain = "^0.3.14"
langchain-community = "^0.3.14"
langchain-ollama = "^0.2.2"
langchain-experimental = "^0.3.4"
langfuse = "^2.59.3"
langchain-elasticsearch = "^0.3.2"
langgraph = "^0.2.74"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
